# dioxus-mcp

./: .gitignore  CLOSED_LOOP_EVAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RUNTIME_TOOLS.md  TODO.md  TOOLS.md  TOOLS_REFERENCE.md  justfile
.github/workflows/: ci.yml
crates/dioxus-mcp/: .gitignore  Cargo.toml
crates/dioxus-mcp-registry/: Cargo.toml
crates/dioxus-mcp-registry/src/: component.rs  ids.rs  layout.rs  lib.rs  render_model.rs  theme.rs
crates/dioxus-mcp/scripts/: build-ui.sh
crates/dioxus-mcp/src/: http_cors.rs  http_router.rs  lib.rs  project.rs  proposal.rs  registry.rs  server.rs  state.rs
crates/dioxus-mcp/src/tools/: analysis.rs  asset_audit.rs  ast.rs  audit_feature_flags.rs  check_rsx.rs  dead_components.rs  docs.rs  dsl.rs  explain_signal_graph.rs  find_example.rs  lint_project.rs  mod.rs  openapi_spec.rs  project_index.rs  project_tour.rs  prop_drill.rs  props_lint.rs  reinvented_widget.rs  route_map.rs  runtime_events.rs  scaffold.rs  scan.rs  search_docs.rs  server_fn_call_graph.rs  server_fn_summary.rs  signal_lint.rs
crates/dioxus-mcp/src/tools/audit/: asset_audit.rs  audit_feature_flags.rs  auth_map.rs  mod.rs  openapi_spec.rs
crates/dioxus-mcp/src/tools/docs/: find_example.rs  mod.rs
crates/dioxus-mcp/src/tools/docs/find_example/: local.rs
crates/dioxus-mcp/src/tools/dsl/: cargo.rs  cargo_patch.rs  describe_component.rs  dx_components.rs  execute.rs  get_registry.rs  layout_library.rs  list_components.rs  mod.rs  modify.rs  plan.rs  preflight.rs  propose.rs  remove.rs  render.rs  render_model.rs  resources.rs  spec.rs  specs.rs  templates.rs  tests.rs  text_edit.rs  types.rs  util.rs  verify_install.rs  wire.rs
crates/dioxus-mcp/src/tools/dsl/generate/: browser_persistence.rs  feed.rs  form.rs  list.rs  login_screen.rs  mod.rs  model.rs  protected_route.rs  screen.rs  session.rs  signal.rs  socket.rs  staleness_gate.rs  store.rs  table.rs  view_state.rs
crates/dioxus-mcp/src/tools/dsl/generate/screen_templates/: client_crud.rs  mod.rs  plain.rs  resource_crud.rs
crates/dioxus-mcp/src/tools/dsl/tests/: client_crud.rs  dx_components_install.rs  get_dsl_spec.rs  mod.rs  modify_and_persistence.rs  plan_and_preflight.rs  resources.rs  scaffold_core.rs
crates/dioxus-mcp/src/tools/find_example/: local.rs
crates/dioxus-mcp/src/tools/inspect/: dead_components.rs  explain_signal_graph.rs  mod.rs  project_index.rs  project_tour.rs  prop_drill.rs  route_map.rs  server_fn_call_graph.rs
crates/dioxus-mcp/src/tools/lints/: check_rsx.rs  components_audit.rs  derived_view_no_memo.rs  duplicate_helper_client_server.rs  empty_async_error_arm.rs  insecure_set_cookie.rs  lint_project.rs  magic_id_prefix.rs  mod.rs  optimistic_lock_gate.rs  polling_future_no_backoff.rs  presence_map_unbounded.rs  props_lint.rs  reinvented_widget.rs  repeated_auth_extractor.rs  server_state_blocking_locks.rs  shared_enum_validation.rs  signal_drilled_2_levels.rs  signal_lint.rs  vec_or_owned_prop_passthrough.rs
crates/dioxus-mcp/src/tools/runtime/: mod.rs  server_fn_summary.rs
crates/dioxus-mcp/src/tools/scaffold/: component.rs  discovery.rs  mod.rs  mod_tree.rs  route.rs  server_fn.rs  types.rs
crates/dioxus-mcp/tests/: integration.rs
crates/dioxus-mcp/tests/fixtures/iter03_baseline/: Cargo.toml
crates/dioxus-mcp/tests/fixtures/iter03_baseline/src/: main.rs
crates/dioxus-mcp/tests/fixtures/iter03_baseline/src/components/: board_screen.rs  mod.rs
crates/dioxus-mcp/tests/fixtures/iter03_baseline/src/model/: card.rs
crates/dioxus-mcp/tests/fixtures/iter03_baseline/src/server/: create_card.rs  delete_card.rs  fetch_board.rs  login_user.rs  logout_user.rs  mod.rs  move_card.rs  ping_presence.rs  state.rs  who_am_i.rs
crates/dioxus-mcp/tests/fixtures/sample-project/: Cargo.toml
crates/dioxus-mcp/tests/fixtures/sample-project/src/: lint_demo.rs  main.rs
crates/dioxus-mcp/tests/fixtures/sample-project/src/components/: child.rs  navbar.rs  unused.rs
crates/dioxus-mcp/tests/fixtures/sample-project/src/server/: fetch_health.rs  fetch_user.rs  mod.rs
crates/dioxus-mcp/tests/fixtures/server_fn_summary/: events.jsonl
crates/dioxus-mcp/ui-dist/: index.html
crates/probe/: Cargo.toml
crates/probe/src/: lib.rs
docs/: layout-styles-plan.md
examples/smoke-app/: Cargo.toml
examples/smoke-app/src/: main.rs
playground/: Cargo.toml  Dioxus.toml  README.md  RUNNING.md
playground/assets/: main.css  preview.css  tailwind.css
playground/src/: app.rs  main.rs
playground/src/interpreter/: client_crud.rs  empty.rs  mod.rs  navigator.rs  render_model.rs  resource_form.rs  resource_list.rs
playground/src/mcp_client/: mod.rs  session.rs  sse.rs  types.rs
playground/src/model/: mod.rs
probe/: Cargo.toml
probe/examples/: smoke.rs
probe/src/: lib.rs
scripts/: build-ui.sh
src/: main.rs  project.rs  server.rs  state.rs
src/tools/: analysis.rs  asset_audit.rs  cli.rs  docs.rs  mod.rs  project_index.rs  project_tour.rs  prop_drill.rs  props_lint.rs  route_map.rs  runtime_events.rs  scaffold.rs  server_fn_summary.rs  signal_lint.rs
tests/: integration.rs
tests/fixtures/runtime_events/: events.jsonl
tests/fixtures/sample-project/src/: router.rs
tests/fixtures/sample-project/src/components/: about.rs  home.rs  mod.rs  user_page.rs
tests/fixtures/sample-project/src/server/: list_posts.rs  mod.rs  orphan_fn.rs
