[package]
name = "dx-playground"
version = "0.1.0"
authors = ["Tony Bierman <tonybierman@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dioxus-mcp-registry = { path = "../crates/dioxus-mcp-registry" }

[features]
default = ["web"]
web = ["dioxus/web"]
